fix on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,10 @@ body {
   background-color: #fefaec;
 }
 
+*{
+  box-sizing: border-box;
+}
+
 h1, h2, h3, h4, h5, h6{
   font-family: 'Amatic SC', cursive;
 }
@@ -28,17 +32,16 @@ h1, h2, h3, h4, h5, h6{
 
 .content > div{
   justify-content: center;
-  width: 50%;
   height: 100%;
 }
-
+.map_container{
+  width: 50%;
+}
 .timeline_container{
   overflow-y: auto;
   margin-left: -10%;
   padding-left: 10%;
-}
-
-.timeline_container > div{
+  width: 60%;
 }
 
 h1{
@@ -75,7 +78,17 @@ span.bold{
   border-bottom: 10px solid #f38181;
   color: #625772;
   display: flex;
-  align-items: baseline;
+  align-items: center;
+  padding-right: 20%;
+  justify-content: flex-start;
+}
+
+
+.title-container > h1{
+  white-space: nowrap;
+  margin-right: 20px;
+}
+.title-container > p{
 }
 
 .timeline-marker{
@@ -84,4 +97,33 @@ span.bold{
 
 a{
   color:#f38181;
+}
+
+@media (max-width: 768px){
+  h1{
+    font-size: 30px;
+  }
+  p{
+    font-size: 15px;
+  }
+
+  div.content{
+    flex-direction: column;
+  }
+
+  div.timeline_container{
+    width: 100%;
+    height: 60%;
+  }
+  div.map_container{
+    width: 100%;
+    height: 40%;
+  }
+
+  .timeline_container{
+    border-top: 10px solid #f38181;
+    overflow-y: auto;
+    margin-left: 0;
+    padding-left: 5%;
+  }
 }
